Fixes to use via browser

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -8,5 +8,9 @@ page-home {
     ion-card-title {
         background-color:#d6e8ff ;
     }
+    .flipped {
+       transform: scaleX(-1);
+       filter: FlipH;
+    }
 
 }
